Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="wrapper">
       <header>
         <h1>Sunscreminder</h1>
-        <p>INF1510 Project spring 2014</p>
+        <p>Prosjekt INF1510, vår 2014</p>
 
         <p class="view"><a href="https://github.com/stianko/Sunscreminder">View the Project on GitHub <small>stianko/Sunscreminder</small></a></p>
 
@@ -28,10 +28,7 @@
         </ul>
       </header>
       <section>
-        <h1>
-<a name="sunscreminder" class="anchor" href="#sunscreminder"><span class="octicon octicon-link"></span></a>Sunscreminder</h1>
-
-<p>Prosjekt INF1510, vår 2014</p>
+        <p> </p><p><a href="http://vimeo.com/97051253">Sunscreminder</a> from <a href="http://vimeo.com/stianko">Stian Kongsvik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 <p>I tillegg til denne koden ble dette biblioteket brukt til e-papir-shieldet:
 <a href="https://github.com/Seeed-Studio/Small_ePaper_Shield">https://github.com/Seeed-Studio/Small_ePaper_Shield</a>
