--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </ul>
       </header>
       <section>
-        <p> </p><p><a href="http://vimeo.com/97051253">Sunscreminder</a> from <a href="http://vimeo.com/stianko">Stian Kongsvik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
+        <p> </p><iframe src="//player.vimeo.com/video/97051253" width="500" height="281" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe> <p><a href="http://vimeo.com/97051253">Sunscreminder</a> from <a href="http://vimeo.com/stianko">Stian Kongsvik</a> on <a href="https://vimeo.com">Vimeo</a>.</p>
 
 <p>I tillegg til denne koden ble dette biblioteket brukt til e-papir-shieldet:
 <a href="https://github.com/Seeed-Studio/Small_ePaper_Shield">https://github.com/Seeed-Studio/Small_ePaper_Shield</a>
